<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>
    <string name="action_change_units">@string/pref_display_mode_key</string>

    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>


    <string name="search">Search</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>

    <string name="default_highlow_value" translatable="false">$123456.78</string>
    <string name="title_high_low">30 day high</string>
    <string name="title_loss_gain_percentage">Loss/Gain %</string>

    <string name="title_loss_gain_actual">Loss/Gain Actual</string>

    <string name="not_any" translatable="false">n/a</string>


    <string name="news_google" translatable="false">Google</string>
    <string name="news_nasdaq" translatable="false">Nasdaq</string>
    <string name="news_cnn" translatable="false">CNN</string>

    <string name="tab_d" translatable="false">D</string>
    <string name="tab_w" translatable="false">W</string>
    <string name="tab_m" translatable="false">M</string>
    <string name="tab_3y" translatable="false">3 Y</string>
    <string name="tab_max" translatable="false">Max</string>

    <string name="cd_google_stock_2">Get stocks news from Google headlines</string>

    <string name="cd_google_stock">Get stocks news from Google headlines</string>
    <string name="cd_nasdaq_stock">Get stocks news from Nasdaq headlines</string>
    <string name="cd_cnn_stock">Get stocks news from CNN headlines</string>
    <string name="cd_title_loss_gain_percentage">Loss/Gain percentage</string>

    <string name="invalid_stock">This stock is not reachable. Try another?</string>


    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>

    <string name="month_day_year">MM/dd/yyyy</string>
    <string name="action_bar_spacing" translatable="false">"      $"</string>
    <string name="dolla_sign" translatable="false">$</string>
    <string name="symbol" translatable="false">symbol</string>
    <string name="color" translatable="false">color</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="percentage">" percentage"</string>
    <string name="comma">,</string>

    <string name="setBackgroundColor" translatable="false">setBackgroundColor</string>





</resources>
